2002-08-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add Q/A about early initialization.

2002-08-05  Theodore A. Roth  <troth@verinet.com>

	* libc/pmstring/strcasecmp_P.S: remove redundant sentence about return
		value.
	
2002-08-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/inline_asm.dox: bump nesting level by one to
		make TOC display look more natural in PDF.

2002-08-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.in: Make HTML/PS/PDF generation configurable.
	* doc/api/Makefile.am: Make documentation generation and
		installation configurable, more cleanup, make PDF
		generation usable with doxygen 1.2.17.

2002-08-05  Theodore A. Roth  <troth@verinet.com>

	* libc/string/memccpy.S: Doxy cleanups.
	* libc/string/memchr.S: Doxy cleanups.
	* libc/string/memcmp.S: Doxy cleanups.
	* libc/string/memcpy.S: Doxy cleanups.
	* libc/string/memmove.S: Doxy cleanups.
	* libc/string/memset.S: Doxy cleanups.
	* libc/string/strcasecmp.S: Doxy cleanups.
	* libc/string/strchr.S: Doxy cleanups.
	* libc/string/strcmp.S: Doxy cleanups.
	* libc/string/strlen.S: Doxy cleanups.
	* libc/string/strlwr.S: Doxy cleanups.
	* libc/string/strnlen.S: Doxy cleanups.
	* libc/string/strrchr.S: Doxy cleanups.

2002-08-05  Theodore A. Roth  <troth@verinet.com>

	* libc/string/strcpy.S: Fix incorrect reference in dox to strncpy().

2002-08-05  Theodore A. Roth  <troth@verinet.com>

	* doc/api/Makefile.am(install-dox-html): Fix to install .js and .png files.

2002-08-03  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.
	* configure.in: Add AVR_LIBC_USER_MANUAL.
	* doc/api/Makefile.am: Use AVR_LIBC_USER_MANUAL instead of hard coded name.
	* doc/api/doxygen.config.in: Ditto.

2002-08-03  Theodore A. Roth  <troth@verinet.com>

	* doc/api/Makefile.am: Change osavr -> avr-libc.
	* doc/api/doxygen.config.in: Ditto.

2002-08-03  Theodore A. Roth  <troth@verinet.com>
